Added todos component and model for todo, will make an individual todo component next

--- a/angular-src/src/app/app.component.html
+++ b/angular-src/src/app/app.component.html
@@ -2,8 +2,8 @@
 <div style="text-align:center">
   <h1>
     {{ title }} {{ name }}!
+    <app-todos></app-todos>
   </h1>
-  {{ 1 + 1 }}
 </div>
 
 
